# squad

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: squad.rb
docs/: adapters.md  cli-reference.md  getting-started.md  squad-yaml.md  workflow-modes.md
docs/superpowers/plans/: 2026-03-21-squad-v2-cli-redesign.md  2026-03-22-poll-receive-plan.md  2026-03-22-session-token-plan.md
docs/superpowers/specs/: 2026-03-22-poll-receive-design.md
examples/basic-loop/: squad.yaml
examples/non-mcp/: squad.yaml
examples/non-mcp/hooks/: codex.sh  on_complete.sh
examples/pipeline/: squad.yaml
scripts/: squad-tmux-launch.sh
scripts/lib/: squad-tmux-launcher-helpers.sh
src/: init.rs  lib.rs  main.rs  roles.rs  setup.rs  store.rs  teams.rs
src/adapter/: hook.rs  mod.rs  watcher.rs
src/config/: mod.rs
src/daemon/: audit.rs  health.rs  mailbox.rs  mod.rs  recovery.rs  registry.rs  server.rs  session.rs  store.rs
src/mcp/: client.rs  mod.rs  tools.rs  transport.rs
src/protocol/: mod.rs
src/roles/: inspector.md  manager.md  worker.md
src/tui/: app.rs  mod.rs  ui.rs
src/workflow/: engine.rs  mod.rs
tests/: adapter.rs  audit_log.rs  cli_test.rs  daemon_cli.rs  daemon_persistence.rs  e2e.rs  e2e_test.rs  init_test.rs  mcp_tools.rs  mcp_transport.rs  roles_test.rs  setup_doctor.rs  setup_test.rs  squad_tmux_launcher_helpers_test.sh  squad_tmux_launcher_smoke.sh  store_test.rs  tui_watch.rs  workflow_engine.rs
