[package]
name = "squad"
version = "0.1.0"
edition = "2021"
description = "Multi-AI-agent terminal collaboration daemon with MCP server and workflow engine"
license = "MIT"
repository = "https://github.com/mco-org/squad"
homepage = "https://github.com/mco-org/squad"
keywords = ["ai", "agent", "mcp", "collaboration", "daemon"]
categories = ["command-line-utilities", "asynchronous"]
readme = "README.md"

[lib]
name = "squad"
path = "src/lib.rs"

[[bin]]
name = "squad"
path = "src/main.rs"

[[bin]]
name = "squad-mcp"
path = "src/bin/squad-mcp.rs"

[[bin]]
name = "squad-hook"
path = "src/bin/squad-hook.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
crossterm = "0.28"
notify = "6"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "net", "io-util", "io-std", "sync", "time"] }
ulid = { version = "1.2", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10"
